# Yolov10-rknn-CPP-RK3588

./: CMakeLists.txt  README.md  build-yolov10.sh
include/: postprocess.h  rga_func.h  rkYolov10.hpp  rkYolov11.hpp  rknnPool.hpp  yolo10.h
install/rknn_yolov10_demo_Linux/: rknn_yolov10_demo
rknn_yolov10_demo/: rknn_yolov10_demo
rknn_yolov10_demo/model/: coco_80_labels_list.txt
src/: file_utils.c  image_utils.c  main.cc  postprocess.cc  rga_func.c  rkYolov10.cc  rkYolov11 (copy).cc  rkYolov11.cc  webcam_main.cc  yolo11.cc  yolov10.cc
